--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,53 @@
-body{
-    background-image:url('http://inews.gtimg.com/newsapp_ls/0/11535311052/0');
-    background-size: cover;
-    background-repeat: no-repeat;
+body {
+  font-family: 'Arial', sans-serif;
+  color: #333333;
+  background-color: #f5f5f5;
+  padding: 20px;
 }
-#login_box{
-    width: 20%;
-    height: 400px;
-    background:#00000040;
-    margin:auto;
-    margin-top: 10%;
-    text-align: center;
-    border-radius: 10px;
-    padding: 50px 50px;
+
+h1 {
+  color: #003366;
 }
-#login_box h2{
-    color: #e8e7b730;
-    margin-top: 5%;
+
+a {
+  color: #0066cc;
+  text-decoration: none;
 }
-#login_box #form #input_box{
-    margin-top: 5%;
+
+a:hover {
+  color: #ff0000;
+  text-decoration: underline;
 }
-#login_box #form #input_box i{
-    color: #e8e7b730;
+
+section {
+  padding: 20px;
 }
-#login_box #form #input_box input{
-    border:0;
-    width: 60%;
-    font-size: 15px;
-    color: #fff;
-    background: #ffffff00;
-    border-bottom: 2px solid#eacda950;
-    padding: 5px 10px;
-    margin-top: 10px;
+
+article {
+  margin-bottom: 20px;
+  border: 1px solid #cccccc;
+  padding: 10px;
+  background-color: #ffffff;
 }
-#login_box button{
-    margin-top: 50px;
-    width: 40%;
-    height: 30px;
-    border-radius: 10px;
-    border: 0;
-    color: #fff;
-    font-size: 15px;
-    background-image: linear-gradient(to top, #30324d 0%, #5f6298 100%);
+
+nav {
+  margin-bottom: 20px;
 }
-#login_box #Sign{
-    margin-top: 45%;
-    margin-left: 60%;
+
+input[type="text"] {
+  padding: 5px;
+  border: 1px solid #cccccc;
 }
-#login_box #Sign a{
-    color: #d1c2d8;
+
+button {
+  padding: 5px 10px;
+  background-color: #0066cc;
+  color: #ffffff;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
